src/test/ui/issues/1-9999/issue-7970b.stderr
error: unexpected end of macro invocation
  --> $DIR/issue-7970b.rs:3:1
   |
LL | macro_rules! test {}
   | ^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments

error: aborting due to previous error

